# -cpp-Soldiers-App

./: .gitignore  AddSoldierDialog.cpp  AddSoldierDialog.h  AddSoldierDialog.ui  CMakeLists.txt  Doxyfile  GameConfiguration.cpp  GameConfiguration.h  GameWindow.cpp  GameWindow.h  GameWindow.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  Map.cpp  Map.h  Rank.cpp  Rank.h  RankDescription.cpp  RankDescription.h  RankRepository.cpp  RankRepository.h  Resources.qrc  Soldier.cpp  Soldier.h  SoldierGraphic.cpp  SoldierGraphic.h  SoldierModel.cpp  SoldierModel.h  main.cpp  readme.md
graphic/: BulletGraphic.cpp  BulletGraphic.h  ExplosionGraphic.cpp  ExplosionGraphic.h  GrenadeGraphic.cpp  GrenadeGraphic.h  MovableVisual.cpp  MovableVisual.h  SoldierGraphic.cpp  SoldierGraphic.h  SoldierPixmap.cpp  SoldierPixmap.h  SoldierVisual.cpp  SoldierVisual.h
